--- a/ComePenny/app/src/main/res/values/strings.xml
+++ b/ComePenny/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">ComePenny</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_myinfo_like_fragment">MyinfoLikeFragment</string>
+    <string name="title_activity_myinfo_write_fragment">MyinfoWriteFragment</string>
 </resources>
