--- a/ComePenny/app/src/main/res/values/strings.xml
+++ b/ComePenny/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_myinfo_like_fragment">MyinfoLikeFragment</string>
     <string name="title_activity_myinfo_write_fragment">MyinfoWriteFragment</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 </resources>
